kubernetes/apps/forgejo/ci/cache-cleanup.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-ci-cache-cleanup
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-ci-cache-cleanup
  policyTypes: [Ingress, Egress]
  ingress: []
  egress: []
